# EDAI

./: 01_data_generator.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  scaffold.py
config/: default.yaml  test.yaml
data/features/refresh_ts=202606071434/: features.parquet
data/offline/: ad_impressions.parquet  interactions.parquet  playback_history.parquet  users.parquet  videos.parquet
data/reports/: quality_report.txt
data/streaming/hour=2026060721/: events.avro
data/streaming/hour=2026060723/: events.avro
docs/: 01_data_generator.md
docs/data_generator/: 01_data_generator.md  architecture.md
src/coursework/: __main__.py
src/coursework/core/: base_generator.py  config.py  schema.py  utils.py
src/coursework/features/: feature_engineer.py  offline_calculator.py  streaming_calculator.py
src/coursework/offline/: ad_impressions.py  base_table_generator.py  interactions.py  offline_data_generator.py  playback_history.py  users.py  videos.py
src/coursework/pipeline/: orchestrator.py  quality_report.py
src/coursework/streaming/: ad_impression.py  base_event_generator.py  pause.py  playback_start.py  skip.py  stream_data_generator.py  (+1 more)
src/data_pipeline/: __init__.py
src/kafka/: consumer.py  producer.py  topic_admin.py
tests/: conftest.py  test_ad_impressions.py  test_base_generator.py  test_base_table_generator.py  test_bronze_ingestion.py  test_data_pipeline_structure.py  test_features.py  test_offline_data_generator.py  test_pipeline.py  test_referential_integrity.py  test_schema_evolution.py  test_streaming_events.py  test_utils.py
(+70 files in other folders)
